--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
-.parallax {
+body {
     /* The image used */
-    background-image: url('./img/repeated-square.png');
+    background-image: url('./img/25101.jpg');
 
     /* Set a specific height */
     height: 100%; 
